2018-06-01  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/i386/i686/fpu/multiarch/libm-test-ulps: Update from master
	branch, commit e02c026f38505cd474ff1bdaa88fc671804f5805.
	* sysdeps/i386/fpu/libm-test-ulps: Likewise.

2018-06-08  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	[BZ #23264]
	* include/unistd.h (__execvpex): New prototype.
	* posix/Makefile (tests): Add tst-spawn4.
	(tests-internal): Add tst-spawn4-compat.
	* posix/execvpe.c (__execvpe_common, __execvpex): New functions.
	* posix/tst-spawn4-compat.c: New file.
	* posix/tst-spawn4.c: Likewise.
	* sysdeps/unix/sysv/linux/spawni.c (__spawni): Do not interpret invalid
	binaries as shell scripts.
	* sysdeps/posix/spawni.c (__spawni): Likewise.
	* NEWS: Add BZ#22264.

2018-06-01  Florian Weimer  <fweimer@redhat.com>

	[BZ #23236]
	* libio/strfile.h (struct _IO_str_fields): Rename members to
	discourage their use and add comment.
	(_IO_STR_DYNAMIC): Remove unused macro.
	* libio/strops.c (_IO_str_init_static_internal): Do not use
	callback pointers.  Call malloc and free.
	(_IO_str_overflow): Do not use callback pointers.  Call malloc
	and free.
	(enlarge_userbuf): Likewise.
	(_IO_str_finish): Call free.
	* libio/wstrops.c (_IO_wstr_init_static): Initialize
	_allocate_buffer_unused.
	(_IO_wstr_overflow): Do not use callback pointers.  Call malloc
	and free.
	(enlarge_userbuf): Likewise.
	(_IO_wstr_finish): Call free.
	* debug/vasprintf_chk.c (__vasprintf_chk): Initialize
	_allocate_buffer_unused, _free_buffer_unused.
	* libio/memstream.c (__open_memstream): Likewise.
	* libio/vasprintf.c (_IO_vasprintf): Likewise.
	* libio/wmemstream.c (open_wmemstream): Likewise.

2018-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	[BZ #23196]
	* string/test-memcpy.c (do_test1): New function.
	(test_main): Call it.

2018-05-23  Andreas Schwab  <schwab@suse.de>

	[BZ #23196]
	CVE-2018-11237
	* sysdeps/x86_64/multiarch/memmove-avx512-no-vzeroupper.S
	(L(preloop_large)): Save initial destination pointer in %r11 and